--- a/http_server_app/public/hello.html
+++ b/http_server_app/public/hello.html
@@ -2,12 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Cool Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello Page - Rust HTTP Server</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Welcome from hello.html</h1>
+    <header class="hero">
+        <h1>Hello, Rustacean!</h1>
+        <p>This is the start of your Rust journey in building HTTP servers.</p>
+    </header>
+
+    <main class="flex-container">
+        <section class="content">
+            <h2>What You'll Learn</h2>
+            <p>You'll learn to create, handle, and optimize HTTP requests with Rust, applying it to real-world projects.</p>
+            <ul>
+                <li>Setup a Rust-based web server</li>
+                <li>Handle routing and middleware</li>
+                <li>Integrate with databases</li>
+            </ul>
+        </section>
+
+        <section class="code-snippet">
+            <h2>Example Code</h2>
+            <pre>
+<code>
+fn main() {
+    println!("Hello, Rust HTTP Server!");
+}
+</code>
+            </pre>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Rust Course | Designed with passion for Rustaceans.</p>
+    </footer>
 </body>
 
 </html>
